# Moasicly

./: .env.example  .gitignore  BUILD_EXE.ps1  INSTALL_REQUIREMENTS.bat  Moasicly.spec  README.md  RULE_SETTINGS_GUIDE.md  RUN_CLASSBALANCER.bat  RUN_CLASSBALANCER.ps1  RUN_SMOKE_TEST.bat  pyproject.toml  requirements.txt  אפיון.txt
class_balancer/: __init__.py  __main__.py  app.py
class_balancer/ai/: __init__.py  anonymizer.py  client.py  settings.py
class_balancer/assignment_engine/: __init__.py  engine.py  preflight.py  scoring.py
class_balancer/db/: __init__.py  database.py
class_balancer/export/: __init__.py  excel_exporter.py
class_balancer/importers/: __init__.py  file_importer.py  mapping.py  templates.py
class_balancer/models/: __init__.py  entities.py  fields.py
class_balancer/services/: __init__.py  assignment_service.py  export_service.py  import_service.py  project_service.py  report_service.py
class_balancer/ui/: __init__.py  bridge.py
class_balancer/ui/qml/: Main.qml
class_balancer/validation/: __init__.py  normalization.py  validator.py
docs/: hardening_status.md  product_hardening_changelog.json  product_hardening_plan.md  spec_compliance.md
docs/baseline_screenshots/: baseline_1280x820_scale125_simulated-note.txt
scripts/: demo_230_verification.py  diagnose_ai_providers.py  generate_example_xlsx.py  generate_verified_200_xlsx.py  stress_assignment_trials.py
tests/: test_core_flow.py  test_friendship_priority.py  test_hardening_regressions.py  test_preflight.py
